--- a/oneday/templates/home.html
+++ b/oneday/templates/home.html
@@ -11,22 +11,22 @@
     <div class="filter-box">🎡 <span>엔터테인먼트/여행</span></div>
   </div>
 
-  <!-- 하단 카테고리 원형 버튼 -->
-  <div class="circle-filters">
-      <nav>
-          <button><span>🧑&zwj;🤝&zwj;🧑</span> 단체</button>
-          <button><span>🍰 카페</span> </button>
-          <button><span>💍</span> 반지</button>
-          <button><span>🎨</span> 드로잉</button>
-          <button><span>🎁</span> 선물</button>
-          <button><span>🧡</span> 데이트</button>
-          <button><span>🧚</span> 향수</button>
-          <button><span>🏃&zwj;</span> 스포츠</button>
-          <button><span>🪵</span> 목공</button>
-          <button><span>🏺</span> 도자기</button>
-      </nav>
 
-  </div>
+  <div class="circle-filters">
+  <nav>
+    <button><span class="circle-label">🧑‍🤝‍🧑 단체</span></button>
+    <button><span class="circle-label">🍰 카페</span></button>
+    <button><span class="circle-label">💍 반지</span></button>
+    <button><span class="circle-label">🎨 드로잉</span></button>
+    <button><span class="circle-label">🎁 선물</span></button>
+    <button><span class="circle-label">🧡 데이트</span></button>
+    <button><span class="circle-label">🧚 향수</span></button>
+    <button><span class="circle-label">🏃 스포츠</span></button>
+    <button><span class="circle-label">🪵 목공</span></button>
+    <button><span class="circle-label">🏺 도자기</span></button>
+  </nav>
+</div>
+
 </section>
     <!-- BANNER -->
     <div class="banner">
