--- a/oneday/templates/home.html
+++ b/oneday/templates/home.html
@@ -130,7 +130,7 @@
 
     <div class="popular-slider">
         <div class="site-width">
-            <h2 class="slider-title">지금 인기 있는 클래스</h2>
+            <h2 class="slider-title">인기 클래스</h2>
 
             <div class="slider-wrapper">
                 <button class="slider-control prev" aria-label="이전">&#10094;</button>
@@ -185,7 +185,7 @@
             <div class="slide-content slide-content--reserve-img">
                 <div class="text-box">
                     <h4>하비메이커 모집</h4>
-                    <h2>지금 바로 클래스를<br>등록해보세요</h2>
+                    <h3>지금 바로 클래스를<br>등록해보세요</h3>
                     <button>자세히 보기</button>
                 </div>
                 <div class="image-box">
@@ -198,7 +198,7 @@
             <div class="slide-content slide-content--reserve-img">
                 <div class="text-box">
                     <h4>플라워 클래스</h4>
-                    <h2>아름다운 꽃꽂이와<br>플라워 아트 배우기</h2>
+                    <h3>아름다운 꽃꽂이와<br>플라워 아트 배우기</h3>
                     <button>클래스 보기</button>
                 </div>
                 <div class="image-box">
@@ -211,7 +211,7 @@
             <div class="slide-content slide-content--reserve-img">
                 <div class="text-box">
                     <h4>도자기 클래스</h4>
-                    <h2>나만의 특별한<br>도자기 만들기</h2>
+                    <h3>나만의 특별한<br>도자기 만들기</h3>
                     <button>지금 참여하기</button>
                 </div>
                 <div class="image-box">
